@@ -39,9 +39,11 @@ struct gid_cache_entry {
 
 static pthread_rwlock_t cache_lock = PTHREAD_RWLOCK_INITIALIZER;
 
-static struct uid_cache_entry *uid_cache = NULL;
+static struct uid_cache_entry *uid_cache_by_uid = NULL;
+static struct uid_cache_entry *uid_cache_by_name = NULL;
 static int uid_cache_size = 0;
-static int uid_cache_capacity = 0;
+static int uid_cache_by_uid_capacity = 0;
+static int uid_cache_by_name_capacity = 0;
 
 static struct gid_cache_entry *gid_cache = NULL;
 static int gid_cache_size = 0;
@@ -49,13 +51,15 @@ static int gid_cache_capacity = 0;
 
 static struct memory_block cache_memory_block = MEMORY_BLOCK_INITIALIZER;
 
-static volatile int cache_rebuild_requested = 1;
+static volatile int cache_clear_requested = 1;
 
-static void rebuild_cache();
-static struct uid_cache_entry *uid_cache_lookup(uid_t key);
-static struct gid_cache_entry *gid_cache_lookup(gid_t key);
+static struct uid_cache_entry *read_through_uid_cache(uid_t uid);
+static struct uid_cache_entry *read_through_uid_by_name_cache(const char* name);
+static struct gid_cache_entry *read_through_gid_cache(gid_t gid);
 static int rebuild_uid_cache();
 static int rebuild_gid_cache();
+static struct uid_cache_entry* append_to_uid_cache(struct passwd *pw);
+static struct gid_cache_entry* append_to_gid_cache(struct group *gr);
 static void clear_uid_cache();
 static void clear_gid_cache();
 static int uid_cache_name_sortcmp(const void *key, const void *entry);
@@ -65,44 +69,98 @@ static int uid_cache_uid_searchcmp(const void *key, const void *entry);
 static int gid_cache_gid_sortcmp(const void *key, const void *entry);
 static int gid_cache_gid_searchcmp(const void *key, const void *entry);
 
-static void rebuild_cache()
+static struct uid_cache_entry *read_through_uid_cache(uid_t uid)
 {
-    free_memory_block(&cache_memory_block);
-    init_memory_block(&cache_memory_block, 1024);
-    rebuild_uid_cache();
-    rebuild_gid_cache();
-    qsort(uid_cache, uid_cache_size, sizeof(struct uid_cache_entry), uid_cache_uid_sortcmp);
-    qsort(gid_cache, gid_cache_size, sizeof(struct gid_cache_entry), gid_cache_gid_sortcmp);
-}
-
-static struct uid_cache_entry *uid_cache_lookup(uid_t key)
-{
-    return (struct uid_cache_entry *)bsearch(
-        &key,
-        uid_cache,
+    struct uid_cache_entry *entry = (struct uid_cache_entry *)bsearch(
+        &uid,
+        uid_cache_by_uid,
         uid_cache_size,
         sizeof(struct uid_cache_entry),
         uid_cache_uid_searchcmp
     );
+    if (entry != NULL) {
+        return entry;
+    }
+
+    pthread_rwlock_unlock(&cache_lock);
+    pthread_rwlock_wrlock(&cache_lock);
+
+    struct passwd* pw = getpwuid(uid);
+    if (pw != NULL) {
+        entry = append_to_uid_cache(pw);
+        insertion_sort_last(uid_cache_by_uid, uid_cache_size, sizeof(struct uid_cache_entry), uid_cache_uid_sortcmp);
+        insertion_sort_last(uid_cache_by_name, uid_cache_size, sizeof(struct uid_cache_entry), uid_cache_name_sortcmp);
+    } else {
+        DPRINTF("Failed to getpwuid(%lld)", (long long)uid);
+    }
+
+    pthread_rwlock_unlock(&cache_lock);
+    pthread_rwlock_rdlock(&cache_lock);
+    return entry;
 }
 
-static struct gid_cache_entry *gid_cache_lookup(gid_t key)
+static struct uid_cache_entry *read_through_uid_by_name_cache(const char* name)
 {
-    return (struct gid_cache_entry *)bsearch(
-        &key,
+    struct uid_cache_entry *entry = (struct uid_cache_entry *)bsearch(
+        name,
+        uid_cache_by_name,
+        uid_cache_size,
+        sizeof(struct uid_cache_entry),
+        uid_cache_name_searchcmp
+    );
+    if (entry != NULL) {
+        return entry;
+    }
+
+    pthread_rwlock_unlock(&cache_lock);
+    pthread_rwlock_wrlock(&cache_lock);
+
+    struct passwd* pw = getpwnam(name);
+    if (pw != NULL) {
+        entry = append_to_uid_cache(pw);
+        insertion_sort_last(uid_cache_by_uid, uid_cache_size, sizeof(struct uid_cache_entry), uid_cache_uid_sortcmp);
+        insertion_sort_last(uid_cache_by_name, uid_cache_size, sizeof(struct uid_cache_entry), uid_cache_name_sortcmp);
+    } else {
+        DPRINTF("Failed to getpwnam(%lld)", (long long)uid);
+    }
+
+    pthread_rwlock_unlock(&cache_lock);
+    pthread_rwlock_rdlock(&cache_lock);
+    return entry;
+}
+
+static struct gid_cache_entry *read_through_gid_cache(gid_t gid)
+{
+    struct gid_cache_entry *entry = (struct gid_cache_entry *)bsearch(
+        &gid,
         gid_cache,
         gid_cache_size,
         sizeof(struct gid_cache_entry),
         gid_cache_gid_searchcmp
     );
+    if (entry != NULL) {
+        return entry;
+    }
+
+    pthread_rwlock_unlock(&cache_lock);
+    pthread_rwlock_wrlock(&cache_lock);
+
+    struct group* gr = getgrgid(gid);
+    if (gr != NULL) {
+        entry = append_to_gid_cache(gr);
+        insertion_sort_last(gid_cache, gid_cache_size, sizeof(struct gid_cache_entry), gid_cache_gid_sortcmp);
+    } else {
+        DPRINTF("Failed to getgrgid(%lld)", (long long)gid);
+    }
+
+    pthread_rwlock_unlock(&cache_lock);
+    pthread_rwlock_rdlock(&cache_lock);
+    return entry;
 }
 
 static int rebuild_uid_cache()
 {
-    /* We're holding the lock, so we have mutual exclusion on getpwent and getgrent too. */
     struct passwd *pw;
-    struct uid_cache_entry *ent;
-    int username_len;
 
     uid_cache_size = 0;
 
@@ -117,17 +175,11 @@ static int rebuild_uid_cache()
             }
         }
 
-        if (uid_cache_size == uid_cache_capacity) {
-            grow_array(&uid_cache, &uid_cache_capacity, sizeof(struct uid_cache_entry));
-        }
-
-        ent = &uid_cache[uid_cache_size++];
-        ent->uid = pw->pw_uid;
-        ent->main_gid = pw->pw_gid;
-
-        username_len = strlen(pw->pw_name) + 1;
-        ent->username_offset = append_to_memory_block(&cache_memory_block, pw->pw_name, username_len);
+        append_to_uid_cache(pw);
     }
+
+    qsort(uid_cache_by_uid, uid_cache_size, sizeof(struct uid_cache_entry), uid_cache_uid_sortcmp);
+    qsort(uid_cache_by_name, uid_cache_size, sizeof(struct uid_cache_entry), uid_cache_name_sortcmp);
 
     endpwent();
     return 1;
@@ -140,15 +192,9 @@ error:
 
 static int rebuild_gid_cache()
 {
-    /* We're holding the lock, so we have mutual exclusion on getpwent and getgrent too. */
     struct group *gr;
-    struct gid_cache_entry *ent;
-    int i;
-    struct uid_cache_entry *uid_ent;
 
     gid_cache_size = 0;
-
-    qsort(uid_cache, uid_cache_size, sizeof(struct uid_cache_entry), uid_cache_name_sortcmp);
 
     while (1) {
         errno = 0;
@@ -161,47 +207,81 @@ static int rebuild_gid_cache()
             }
         }
 
-        if (gid_cache_size == gid_cache_capacity) {
-            grow_array(&gid_cache, &gid_cache_capacity, sizeof(struct gid_cache_entry));
-        }
-
-        ent = &gid_cache[gid_cache_size++];
-        ent->gid = gr->gr_gid;
-        ent->uid_count = 0;
-        ent->uids_offset = cache_memory_block.size;
-
-        for (i = 0; gr->gr_mem[i] != NULL; ++i) {
-            uid_ent = (struct uid_cache_entry *)bsearch(
-                gr->gr_mem[i],
-                uid_cache,
-                uid_cache_size,
-                sizeof(struct uid_cache_entry),
-                uid_cache_name_searchcmp
-            );
-            if (uid_ent != NULL) {
-                grow_memory_block(&cache_memory_block, sizeof(uid_t));
-                ((uid_t *)MEMORY_BLOCK_GET(cache_memory_block, ent->uids_offset))[ent->uid_count++] = uid_ent->uid;
-            }
-        }
+        append_to_gid_cache(gr);
     }
+
+    qsort(gid_cache, gid_cache_size, sizeof(struct gid_cache_entry), gid_cache_gid_sortcmp);
 
     endgrent();
     return 1;
 error:
     endgrent();
     clear_gid_cache();
-    DPRINTF("Failed to rebuild uid cache");
+    DPRINTF("Failed to rebuild gid cache");
     return 0;
+}
+
+static struct uid_cache_entry* append_to_uid_cache(struct passwd *pw)
+{
+    if (uid_cache_size == uid_cache_by_uid_capacity) {
+        grow_array(&uid_cache_by_uid, &uid_cache_by_uid_capacity, sizeof(struct uid_cache_entry));
+    }
+    if (uid_cache_size == uid_cache_by_name_capacity) {
+        grow_array(&uid_cache_by_name, &uid_cache_by_name_capacity, sizeof(struct uid_cache_entry));
+    }
+
+    struct uid_cache_entry *entry = &uid_cache_by_uid[uid_cache_size];
+    entry->uid = pw->pw_uid;
+    entry->main_gid = pw->pw_gid;
+
+    int username_len = strlen(pw->pw_name) + 1;
+    entry->username_offset = append_to_memory_block(&cache_memory_block, pw->pw_name, username_len);
+
+    uid_cache_by_name[uid_cache_size] = *entry;
+    ++uid_cache_size;
+
+    return entry;
+}
+
+static struct gid_cache_entry* append_to_gid_cache(struct group *gr)
+{
+    if (gid_cache_size == gid_cache_capacity) {
+        grow_array(&gid_cache, &gid_cache_capacity, sizeof(struct gid_cache_entry));
+    }
+
+    struct gid_cache_entry *entry = &gid_cache[gid_cache_size++];
+    entry->gid = gr->gr_gid;
+    entry->uid_count = 0;
+    entry->uids_offset = cache_memory_block.size;
+
+    for (int i = 0; gr->gr_mem[i] != NULL; ++i) {
+        struct uid_cache_entry *uid_entry = read_through_uid_by_name_cache(gr->gr_mem[i]);
+        if (uid_entry != NULL) {
+            grow_memory_block(&cache_memory_block, sizeof(uid_t));
+            ((uid_t *)MEMORY_BLOCK_GET(cache_memory_block, entry->uids_offset))[entry->uid_count++] = uid_entry->uid;
+        }
+    }
+
+    return entry;
 }
 
 static void clear_uid_cache()
 {
+    free(uid_cache_by_uid);
+    free(uid_cache_by_name);
+    uid_cache_by_uid = NULL;
+    uid_cache_by_name = NULL;
     uid_cache_size = 0;
+    uid_cache_by_uid_capacity = 0;
+    uid_cache_by_name_capacity = 0;
 }
 
 static void clear_gid_cache()
 {
+    free(gid_cache);
+    gid_cache = NULL;
     gid_cache_size = 0;
+    gid_cache_capacity = 0;
 }
 
 static int uid_cache_name_sortcmp(const void *a, const void *b)
@@ -346,27 +426,28 @@ int user_belongs_to_group(uid_t uid, gid_t gid)
 
     pthread_rwlock_rdlock(&cache_lock);
 
-    if (cache_rebuild_requested) {
+    if (cache_clear_requested) {
         pthread_rwlock_unlock(&cache_lock);
 
         pthread_rwlock_wrlock(&cache_lock);
-        if (cache_rebuild_requested) {
-            DPRINTF("Building user/group cache");
-            cache_rebuild_requested = 0;
-            rebuild_cache();
+        if (cache_clear_requested) {
+            DPRINTF("Clearing user/group cache");
+            cache_clear_requested = 0;
+            clear_uid_cache();
+            clear_gid_cache();
         }
         pthread_rwlock_unlock(&cache_lock);
 
         pthread_rwlock_rdlock(&cache_lock);
     }
 
-    struct uid_cache_entry *uent = uid_cache_lookup(uid);
-    if (uent && uent->main_gid == gid) {
+    struct uid_cache_entry *uent = read_through_uid_cache(uid);
+    if (uent != NULL && uent->main_gid == gid) {
         ret = 1;
         goto done;
     }
 
-    struct gid_cache_entry *gent = gid_cache_lookup(gid);
+    struct gid_cache_entry *gent = read_through_gid_cache(gid);
     if (gent) {
         uids = (uid_t*)MEMORY_BLOCK_GET(cache_memory_block, gent->uids_offset);
         for (i = 0; i < gent->uid_count; ++i) {
@@ -382,7 +463,33 @@ done:
     return ret;
 }
 
-void invalidate_user_cache()
+void rebuild_user_caches()
 {
-    cache_rebuild_requested = 1;
+    pthread_rwlock_wrlock(&cache_lock);
+
+    clear_uid_cache();
+    clear_gid_cache();
+    free_memory_block(&cache_memory_block);
+    init_memory_block(&cache_memory_block, 1024);
+    rebuild_uid_cache();
+    rebuild_gid_cache();
+
+    pthread_rwlock_unlock(&cache_lock);
+}
+
+void invalidate_user_caches()
+{
+    cache_clear_requested = 1;
+}
+
+void clear_user_caches()
+{
+    pthread_rwlock_wrlock(&cache_lock);
+
+    clear_uid_cache();
+    clear_gid_cache();
+    free_memory_block(&cache_memory_block);
+    init_memory_block(&cache_memory_block, 1024);
+
+    pthread_rwlock_unlock(&cache_lock);
 }
