@@ -780,6 +780,7 @@ if Process.uid == 0 && `uname`.strip == 'Linux'
         `groupdel bindfs_test_group 2>&1`
         `groupadd -f bindfs_test_group`
         raise "Failed to create test group" if !$?.success?
+
         testenv("--mirror=@bindfs_test_group", :title => "SIGUSR1 rereads user database") do |bindfs_pid|
             touch('src/file')
             chown('nobody', nil, 'src/file')
@@ -792,10 +793,30 @@ if Process.uid == 0 && `uname`.strip == 'Linux'
             assert { File.stat('mnt/file').uid == $nobody_uid }
 
             Process.kill("SIGUSR1", bindfs_pid)
-            sleep 0.5
 
-            assert { File.stat('mnt/file').uid == 0 }
+            assert { wait_for { File.stat('mnt/file').uid == 0 } }
         end
+
+        `groupdel bindfs_test_group 2>&1`
+        `groupadd -f bindfs_test_group`
+        raise "Failed to create test group" if !$?.success?
+
+        testenv("--mirror=@bindfs_test_group --no-user-group-precaching", :title => "SIGUSR1 rereads user database also in no precaching mode") do |bindfs_pid|
+            touch('src/file')
+            chown('nobody', nil, 'src/file')
+
+            assert { File.stat('mnt/file').uid == $nobody_uid }
+            `usermod -G bindfs_test_group -a root`
+            raise "Failed to add root to test group" if !$?.success?
+
+            # Cache not refreshed yet
+            assert { File.stat('mnt/file').uid == $nobody_uid }
+
+            Process.kill("SIGUSR1", bindfs_pid)
+
+            assert { wait_for { File.stat('mnt/file').uid == 0 } }
+        end
+
     ensure
         `groupdel bindfs_test_group 2>&1`
     end
